--- a/apps/devops-toolkit.yaml
+++ b/apps/devops-toolkit.yaml
@@ -1,22 +1,12 @@
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: GitRepository
 metadata:
-  name: devops-toolkit-staging
+  name: devops-toolkit
   namespace: flux-system
 spec:
-  chart:
-    spec:
-      chart: helm
-      reconcileStrategy: ChartVersion
-      sourceRef:
-        kind: GitRepository
-        name: devops-toolkit
   interval: 30s
-  targetNamespace: staging
-  values:
-    image:
-      tag: 2.9.9
-    ingress:
-      host: staging.devops-toolkit..nip.io
+  ref:
+    branch: master
+  url: https://github.com/vfarcic/devops-toolkit
 
