--- a/apps/devops-toolkit.yaml
+++ b/apps/devops-toolkit.yaml
@@ -1,12 +1,22 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: GitRepository
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
 metadata:
-  name: devops-toolkit
+  name: devops-toolkit-staging
   namespace: flux-system
 spec:
+  chart:
+    spec:
+      chart: helm
+      reconcileStrategy: ChartVersion
+      sourceRef:
+        kind: GitRepository
+        name: devops-toolkit
   interval: 30s
-  ref:
-    branch: master
-  url: https://github.com/vfarcic/devops-toolkit
+  targetNamespace: staging
+  values:
+    image:
+      tag: 2.9.9
+    ingress:
+      host: staging.devops-toolkit..nip.io
 
